--- a/admin.html
+++ b/admin.html
@@ -149,6 +149,7 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
     <button class="tab active" onclick="switchTab('jobs')">Jobs Management</button>
     <button class="tab" onclick="switchTab('blogs')">Blog Management</button>
     <button class="tab" onclick="switchTab('images')">Image Management</button>
+    <button class="tab" onclick="window.location.href='/content-editor.html'">Website Content</button>
   </div>
 
   <!-- JOBS MANAGEMENT TAB -->
