--- a/content-editor.html
+++ b/content-editor.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Content Management - Win Win Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script type="module" src="./js/supabaseClient.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./js/supabaseClient.js"></script>
 </head>
 <body class="bg-gray-900 text-white min-h-screen">
   <div class="container mx-auto px-4 py-8">
@@ -64,8 +65,8 @@
     <div id="message" class="fixed bottom-4 right-4 hidden"></div>
   </div>
 
-  <script type="module">
-    import { supabase } from './js/supabaseClient.js';
+  <script>
+    const supabase = window.supabase;
 
     const pageSelect = document.getElementById('pageSelect');
     const languageSelect = document.getElementById('languageSelect');
