--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Join Win Win, a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions across Slovenia." />
-    <meta name="keywords" content="sales jobs, sales careers, Slovenia jobs, B2C sales, field sales, call center, telecommunications" />
+    <meta name="description" content="Win Win je vodilna agencija za zaposlovanje, specializirana za prodajna delovna mesta, telefonsko prodajo, call center in telekomunikacije po Sloveniji." />
+    <meta name="keywords" content="delovna mesta, prodajna dela, zaposlitev, agencija za zaposlovanje, call center, telefonska prodaja, telekomunikacije, kariera, prodajne priložnosti, Slovenija" />
     <meta name="author" content="Win Win d.o.o." />
 
-    <title>Win Win - Build Your Sales Career in Slovenia</title>
+    <title>Win Win - Agencija za zaposlovanje | Prodajna delovna mesta v Sloveniji</title>
 
-    <meta property="og:title" content="Win Win - Build Your Sales Career in Slovenia" />
-    <meta property="og:description" content="Join Win Win, a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions across Slovenia." />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+    <meta property="og:title" content="Win Win - Agencija za zaposlovanje | Prodajna delovna mesta v Sloveniji" />
+    <meta property="og:description" content="Win Win je vodilna agencija za zaposlovanje, specializirana za prodajna delovna mesta, telefonsko prodajo, call center in telekomunikacije po Sloveniji." />
+    <meta property="og:image" content="https://www.win-win.si/logo2.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Win Win" />
+    <meta property="og:url" content="https://www.win-win.si" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Win Win - Build Your Sales Career in Slovenia" />
-    <meta name="twitter:description" content="Join Win Win, a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions across Slovenia." />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="twitter:title" content="Win Win - Agencija za zaposlovanje | Prodajna delovna mesta v Sloveniji" />
+    <meta name="twitter:description" content="Win Win je vodilna agencija za zaposlovanje, specializirana za prodajna delovna mesta, telefonsko prodajo, call center in telekomunikacije po Sloveniji." />
+    <meta name="twitter:image" content="https://www.win-win.si/logo2.png" />
+
+    <link rel="canonical" href="https://www.win-win.si" />
 
     <link rel="preconnect" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net">
     <link rel="dns-prefetch" href="https://6949b72b30e1aa8ca4b7eef2.imgix.net">
