--- a/admin.html
+++ b/admin.html
@@ -267,7 +267,8 @@ label{display:block;margin-bottom:6px;font-weight:600;font-size:14px;color:#ccc}
             <option value="partner-logo-3">Partner Logo 3</option>
           </optgroup>
           <optgroup label="Home Page">
-            <option value="home-hero">Home - Hero Background</option>
+            <option value="home-hero">Home - Hero Background (Desktop)</option>
+            <option value="home-hero-mobile">Home - Hero Background (Mobile)</option>
             <option value="home-about">Home - About Section Background</option>
             <option value="home-join-team">Home - Join Team Section Background</option>
             <option value="home-why-choose">Home - Why Choose Image</option>
